--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div id=header>
-	<h4 id="title">For</h4>
+	<h4 id="title">Roll For Shoes</h4>
 
 	<span><i class="far fa-question-circle" id="btnRules" aria-hidden="true"></i></span>
 	<div class="alert alert-info" id="pnlRules" role="alert">
